--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.69.5",
     "tailwind-merge": "^1.13.2"
   },
   "devDependencies": {
