--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     }
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.4.3",
+    "@tanstack/react-query-devtools": "^5.4.3",
+    "axios": "^1.6.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recoil": "^0.7.7",
     "sass": "^1.69.5",
     "tailwind-merge": "^1.13.2"
   },
