--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "eslint ./**/*.{js,jsx,ts,tsx} --cache --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "eslintIgnore": "build/*"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
