--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,11 @@
         "peerDependencies": false
       }
     ],
+    "arrow-body-style": "off",
+    "react/function-component-definition": [
+      2,
+      { "namedComponents": ["arrow-function", "function-declaration"] }
+    ],
     "import/prefer-default-export": ["off", { "target": "single" }],
     "operator-linebreak": [0]
   }
