--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "lint-staged": {
     "*.{ts,tsx}": [
       "prettier --write",
-      "eslint --fix --cache"
+      "eslint --fix"
     ]
   },
   "husky": {
@@ -31,6 +31,7 @@
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "recoil": "^0.7.7",
     "sass": "^1.69.5",
     "tailwind-merge": "^1.13.2"
