--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
         "peerDependencies": false
       }
     ],
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "off",
     "arrow-body-style": "off",
     "react/function-component-definition": [
       2,
