--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.6.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
     "next": "13.4.9",
     "react": "18.2.0",
