--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
         "peerDependencies": false
       }
     ],
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "arrow-body-style": "off",
