design: 게시글 페이지 퍼블리싱

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     ],
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-static-element-interactions": "off",
+    "object-curly-newline": "off",
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "arrow-body-style": "off",
