--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,12 @@
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "arrow-body-style": "off",
+    "jsx-a11y/label-has-associated-control": [
+      2,
+      {
+        "labelAttributes": ["htmlFor"]
+      }
+    ],
     "react/function-component-definition": [
       2,
       { "namedComponents": ["arrow-function", "function-declaration"] }
