--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,8 +19,10 @@
     "jsx-a11y/no-static-element-interactions": "off",
     "object-curly-newline": "off",
     "no-unused-vars": "off",
+    "react/require-default-props": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "arrow-body-style": "off",
+    "implicit-arrow-linebreak": "off",
     "jsx-a11y/label-has-associated-control": [
       2,
       {
