--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
     "react-paginate": "^8.2.0",
     "recoil": "^0.7.7",
