--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
     "react-paginate": "^8.2.0",
+    "react-select": "^5.8.0",
     "recoil": "^0.7.7",
     "sass": "^1.69.5",
     "tailwind-merge": "^1.13.2"
