--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/no-unused-vars": "off",
     "arrow-body-style": "off",
     "implicit-arrow-linebreak": "off",
+    "no-nested-ternary": "off",
     "jsx-a11y/label-has-associated-control": [
       2,
       {
