--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "lint:fix": "eslint ./**/*.{js,jsx,ts,tsx} --cache --fix",
     "prepare": "husky install",
-    "eslintIgnore": "build/*"
+    "eslintIgnore": "build/*",
+    "test": "jest --watch --coverage",
+    "test:ci": "jest --ci"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
@@ -25,6 +27,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.4.3",
     "@tanstack/react-query-devtools": "^5.4.3",
+    "@testing-library/user-event": "^14.5.1",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
@@ -42,6 +45,9 @@
     "tailwind-merge": "^1.13.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.0",
+    "@types/jest": "^29.5.8",
     "@types/lodash": "^4.14.200",
     "@types/node": "^20.4.0",
     "@types/react": "^18.2.14",
@@ -55,10 +61,13 @@
     "eslint-config-next": "^13.4.9",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^13.2.3",
     "postcss": "^8.4.25",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.6"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
