--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "arrow-body-style": "off",
+    "react/no-array-index-key": "off",
     "jsx-a11y/label-has-associated-control": [
       2,
       {
