--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     }
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.4.3",
+    "@tanstack/react-query": "^5.8.4",
     "@tanstack/react-query-devtools": "^5.4.3",
     "@testing-library/user-event": "^14.5.1",
     "axios": "^1.6.0",
@@ -42,6 +42,7 @@
     "react-select": "^5.8.0",
     "recoil": "^0.7.7",
     "sass": "^1.69.5",
+    "sweetalert2": "^11.10.1",
     "tailwind-merge": "^1.13.2"
   },
   "devDependencies": {
