--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.6.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "cookies-next": "^4.1.0",
     "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
     "next": "13.4.9",
