--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "react/no-array-index-key": "off",
     "implicit-arrow-linebreak": "off",
     "no-nested-ternary": "off",
+    "@typescript-eslint/no-unused-expressions": "off",
     "consistent-return": "off",
     "no-alert": "off",
     "react/function-component-definition": [
