--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,11 +18,13 @@
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-static-element-interactions": "off",
     "object-curly-newline": "off",
+    "@typescript-eslint/no-shadow": "off",
     "no-unused-vars": "off",
     "react/require-default-props": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "off",
     "arrow-body-style": "off",
+    "no-unsafe-optional-chaining": "off",
     "react/no-array-index-key": "off",
     "implicit-arrow-linebreak": "off",
     "no-nested-ternary": "off",
