--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "recoil": "^0.7.7",
     "sass": "^1.69.5",
     "sweetalert2": "^11.10.1",
-    "tailwind-merge": "^1.13.2"
+    "tailwind-merge": "^1.13.2",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
