--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,12 +17,16 @@
     ],
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-static-element-interactions": "off",
+    "react/jsx-one-expression-per-line": "off",
     "object-curly-newline": "off",
     "no-unused-vars": "off",
+    "react/no-unused-prop-types": "off",
     "react/require-default-props": "off",
     "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-shadow": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "off",
     "arrow-body-style": "off",
+    "@typescript-eslint/no-unused-expressions": "off",
     "react/no-array-index-key": "off",
     "implicit-arrow-linebreak": "off",
     "no-nested-ternary": "off",
