--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "prepare": "husky install",
     "eslintIgnore": "build/*",
     "test": "jest --watch --coverage",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
@@ -48,6 +50,15 @@
     "timeago.js": "^4.0.2"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.6.0-alpha.7",
+    "@storybook/addon-interactions": "^7.6.0-alpha.7",
+    "@storybook/addon-links": "^7.6.0-alpha.7",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-styling-webpack": "^0.0.5",
+    "@storybook/blocks": "^7.6.0-alpha.7",
+    "@storybook/nextjs": "^7.6.0-alpha.7",
+    "@storybook/react": "^7.6.0-alpha.7",
+    "@storybook/test": "^7.6.0-alpha.4",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
     "@types/jest": "^29.5.8",
@@ -63,12 +74,14 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "^13.4.9",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^13.2.3",
     "postcss": "^8.4.25",
     "prettier": "^3.0.0",
+    "storybook": "^7.6.0-alpha.7",
     "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
