--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
             ${{ runner.os }}-npm-
 
       - name: Install the project dependencies
-        run: npm install
+        run: npm ci
 
       - name: Prettier check
         run: npm run prettier
