chore: cypress 설치

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,17 @@
         "peerDependencies": false
       }
     ],
+    "max-len": [
+      "error",
+      {
+        "code": 60,
+        "tabWidth": 2,
+        "ignoreComments": true, //"comments": 80
+        "ignoreUrls": true,
+        "ignoreStrings": true,
+        "ignoreTemplateLiterals": true
+      }
+    ],
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-static-element-interactions": "off",
     "react/jsx-one-expression-per-line": "off",
