--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@typescript-eslint/parser": "^5.61.0",
     "autoprefixer": "^10.4.14",
     "cypress": "^13.6.0",
+    "cypress-file-upload": "^5.0.8",
     "eslint": "^8.44.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
