--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
     "react/jsx-props-no-spreading": "off",
     "linebreak-style": 0,
     "react/react-in-jsx-scope": "off",
+    "import/no-cycle": "off",
     "import/no-extraneous-dependencies": [
       "off",
       {
