refactor: options 컴포넌트 함수로직 데이터/계산/액션 으로 나누기

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "linebreak-style": 0,
     "react/react-in-jsx-scope": "off",
     "import/no-cycle": "off",
+    "no-param-reassign": "off",
     "import/no-extraneous-dependencies": [
       "off",
       {
