--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@testing-library/user-event": "^14.5.1",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.6.1",
+    "classnames": "^2.5.1",
     "clsx": "^1.2.1",
     "cookies-next": "^4.1.0",
     "framer-motion": "^10.16.4",
