--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.8.0",
     "react-paginate": "^8.2.0",
     "react-select": "^5.8.0",
     "recoil": "^0.7.7",
