--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:mocking": "NEXT_PUBLIC_MOCKING=true next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -39,6 +40,7 @@
     "cookies-next": "^4.1.0",
     "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
+    "msw": "^2.2.2",
     "next": "13.4.9",
     "nock": "^13.3.8",
     "react": "18.2.0",
