feat: msw 더미데이터 생성

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
+NEXT_PUBLIC_BAES_URL=http://localhost:8080
+
 NEXT_PUBLIC_KAKAO_MAP_REST_API=179a8c907891026029fb59adbc860843
 NEXT_PUBLIC_KAKAO_MAP_CLIENT=4948158107c883c7ba08e9ca9ea1fbb7
+
